# Prediction_Municipale

./: .gitignore  README.md  app.py  main.py  pyproject.toml  res.ipynb
notebooks/analysis/: 01_EDA_Municipales_Voix.ipynb  02_EDA_Municipales_Geo.ipynb  03_EDA_INSEE_Municipales.ipynb  EDA_sociologie_electorale.ipynb
notebooks/exploratory/: EDA_abstention.ipynb  EDA_sociologie_electorale.ipynb  INSEE.ipynb  Insee.ipynb  candidats.ipynb  candidats_stats.ipynb  nuance.ipynb  nuances.ipynb  res.ipynb  resultat.ipynb  stat_ville_histo.ipynb  ville_stat.ipynb
pages/: 1_Carte_Municipale.py  2_Detail_Commune.py  3_Analyse_Nationale.py  4_Segmentation.py  5_Machine_Learning.py  6_Prediction.py
src/: config.py  eda_utils.py  features_insee.py  insee_loader.py  preprocessing.py  resultats_loader.py
utils/: data.py  theme.py
